# dshow-eyetoy

./: .gitignore  CMakeLists.txt  README.md  eyecam-filter.cpp  eyecam-filter.hpp  eyecam-guid.h.in  eyecam-install.bat.in  eyecam-module.cpp  eyecam-module.def.in  eyecam-uninstall.bat.in  ov519.cpp  ov519.hpp  placeholder.cpp  usb.cpp  usb.hpp  util.hpp
.github/workflows/: cmake.yml
cmake/: FindLibUSB.cmake
dshow/: dshow-enum.cpp  dshow-enum.hpp  dshow-formats.cpp  dshow-formats.hpp  log.cpp  output-filter.hpp
jpgd/: jpgd.cpp
